move vertical-align mixin to its correct folder: mixin/_spacing

--- a/wp-content/themes/underscore/sass/layout/navigation/_menus.scss
+++ b/wp-content/themes/underscore/sass/layout/navigation/_menus.scss
@@ -87,19 +87,6 @@
     }
 }
 
-/**
- * Vertical Align Mixin
- */
-
-@mixin vertical-align($position: relative) {
-    position: $position;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-
 // Main Navigation Link style
 .main-navigation {
     float: right;
