--- a/wp-content/themes/underscore/sass/utils/mixin/_spacing.scss
+++ b/wp-content/themes/underscore/sass/utils/mixin/_spacing.scss
@@ -23,3 +23,15 @@
     margin-left: $value;
     margin-right: $value;
 }
+
+/**
+ * Vertical Align Mixin
+ */
+
+@mixin vertical-align($position: relative) {
+    position: $position;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
